--- a/index.html
+++ b/index.html
@@ -474,29 +474,20 @@
   <script>
     // Games data
     const games = [
-    [
-  {
-    "title": "Tank Arena",
-    "embed": "https://cloud.onlinegames.io/games/2025/construct/293/tank-arena/index-og.html",
-    "image": "https://www.onlinegames.io/media/posts/956/responsive/Tank-Arena-Online-xs.jpg",
-    "tags": "2-player,2d,action,arcade,arena,crazy,free,fun,tank",
-    "description": "Tank Arena is an online tank battle game that you can play with your friend on the same device.  In a 2D maze, each tank’s shot can bounce off walls, so you never know where danger might appear next.  Similar to the famous browser game Tank Trouble, this game ups the challenge by letting you take on AI tanks, go head-to-head with a friend, or try intense online matches.  Now load Tank Arena and sneak in a quick battle when you’ve got some free time!"
-  },
-  {
-    "title": "Kings io",
-    "embed": "https://cloud.onlinegames.io/games/2025/construct/208/kings-io/index-og.html",
-    "image": "https://www.onlinegames.io/media/posts/952/responsive/Kings-io-xs.jpg",
-    "tags": "2d,arena,army,battle,free,io-games,strategy,war",
-    "description": "The road to royalty is that way!  ⬆️ If you're ready to rule your own kingdom, play Kings io.  This is an exciting online strategy game where you start as a small-time ruler, determined to rise to glory by building a grand empire.  If you’re up for gathering gold, recruiting strong troops, and outsmarting enemy kings, then this free game is your perfect battlefield."
-  },
-  {
-    "title": "Squid Race Simulator",
-    "embed": "https://www.onlinegames.io/games/2021/unity3/squid-race-simulator/index.html",
-    "image": "https://www.onlinegames.io/media/posts/950/responsive/squid-race-simulator-xs.jpg",
-    "tags": "1-player,3d,action,avoid,crazy,free,fun,mobile,running",
-    "description": "Run, stop, survive!  Squid Race Simulator brings the iconic Red Light, Green Light game from Squid Game to your screen.  Tap or click to walk, release to stop, and cross the finish line before time runs out.  But be careful!"
-  },
-  {
+      {
+        title: "Tank Arena",
+        embed: "https://cloud.onlinegames.io/games/2025/construct/293/tank-arena/index-og.html",
+        image: "https://www.onlinegames.io/media/posts/956/responsive/Tank-Arena-Online-xs.jpg",
+        description: "Tank Arena is an online tank battle game that you can play with your friend on the same device."
+      },
+      {
+        title: "Squid Race Simulator",
+        embed: "https://www.onlinegames.io/games/2021/unity3/squid-race-simulator/index.html",
+        image: "https://www.onlinegames.io/media/posts/950/responsive/squid-race-simulator-xs.jpg",
+        description: "Run, stop, survive! Squid Race Simulator brings the iconic Red Light, Green Light game from Squid Game to your screen."
+      },
+      // Add more games here
+      {
     "title": "SpartaHoppers",
     "embed": "https://cloud.onlinegames.io/games/2025/construct/227/spartahoppers/index-og.html",
     "image": "https://www.onlinegames.io/media/posts/949/responsive/sparta-hoppers-game-xs.jpg",
@@ -1889,7 +1880,13 @@
     "tags": "1-player,2d,animal,brain,cute,drawing,free,html5,kids,logic,mobile,mouse,puzzle",
     "description": "Draw The Bird Path is a drawing game where the player tries to guide sweet birds home by drawing paths.  Help the birds find their nests.  Create a path for them by overcoming obstacles and objects.  But be careful when guiding more than one bird to their home; they should not collide with each other."
   },
-      // Add more games here
+  {
+    "title": "Kings io",
+    "embed": "https://cloud.onlinegames.io/games/2025/construct/208/kings-io/index-og.html",
+    "image": "https://www.onlinegames.io/media/posts/952/responsive/Kings-io-xs.jpg",
+    "tags": "2d,arena,army,battle,free,io-games,strategy,war",
+    "description": "The road to royalty is that way!  ⬆️ If you're ready to rule your own kingdom, play Kings io.  This is an exciting online strategy game where you start as a small-time ruler, determined to rise to glory by building a grand empire.  If you’re up for gathering gold, recruiting strong troops, and outsmarting enemy kings, then this free game is your perfect battlefield."
+  },
     ];
 
     // Randomly assign tile sizes
