--- a/index.html
+++ b/index.html
@@ -2080,5 +2080,6 @@
     // Initial render
     renderGames();
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </body>
 </html>
