--- a/index.html
+++ b/index.html
@@ -2167,5 +2167,7 @@
     // Initial render
     renderGames();
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1327653381351844"
+     crossorigin="anonymous"></script>
 </body>
 </html>
