--- a/apps.html
+++ b/apps.html
@@ -192,6 +192,7 @@
         function closeCustomAlert() {
             document.getElementById("currentVersionAlert").style.display = "none";
         }
+        <script async src="https://script.adquake.com/js/adquake.js" adquake-key="MTXz/iwJQEKL8SIDzdTiRw=="></script>
     </script>
 </body>
 </html>
