--- a/index.html
+++ b/index.html
@@ -2167,6 +2167,7 @@
     // Initial render
     renderGames();
   </script>
+  <script async src="https://script.adquake.com/js/adquake.js" adquake-key="MTXz/iwJQEKL8SIDzdTiRw=="></script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1327653381351844"
      crossorigin="anonymous"></script>
 </body>
